--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <html>
+  <body>
+    <h1> Nicolas Rojas </h1>
+    <h2> PP343 </h2>
+    <p> This is my first web page for PP434</p>
+  </body>
 
 </html>
