--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
             href="https://www.github.com/nicolasrojasv">GitHub</a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
-        This page acts as your portfolio of charts. You can use it as a good starting point to display your work but make sure to customise it to make it your own, or even start from scratch.  
+        This project explores the use of data visualisation and data science techniques to transform raw data into meaningful insights. 
+        Using Python for data processing and analysis, and HTML/CSS/JavaScript (with JSON as the data exchange format) for presentation. 
+        The project will build an interactive web-based dashboard that displays graphs and visualisations around a not yet chosen theme. 
+        The goal is to practice the end-to-end workflow: retrieving and preparing data, applying analytical methods, and communicating results
+        through clear, engaging visual representations hosted on GitHub Pages.  
     </h3>
 
     <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
