--- a/index.html
+++ b/index.html
@@ -59,8 +59,38 @@
         through clear, engaging visual representations hosted on GitHub Pages.  
     </p>
 
-    <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
+    <!-- Testing section for 2 new graphs -->
     <section>
+        <div class="chart-description">
+            <h2>Section 2: Tennis Prize Money</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                Tennis is a highly unequal sport. Those who advance through consecutive rounds in major tournaments are able to finance their season, 
+                while those who remain at lower levels face severe financial constraints in developing their careers, 
+                since the costs of maintaining a tennis life are higher than the prize money from smaller tournaments.
+            </p>
+        </div>
+        <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
+    
+    <!-- This is a script, it's a way to run JavaScript code on the page -->
+    <script>
+        // This is a comment in JavaScript - it's a different language to HTML and CSS
+
+        let figure_2_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
+                                                                                                                    // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
+
+        vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
+
+        // Do you want to add more graphs?
+        // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
+        // e.g. 
+        // let figure_3_spec = ...
+        // vegaEmbed('#Location3', figure_3_spec)
+
+
+    </script>
+
+        <section>
         <div class="chart-description">
             <h2>Section 1: A basic chart</h2>
             <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
@@ -94,6 +124,8 @@
 
 
     </script>
+
+
 
 </body>
     
