--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
 
-        let figure_2_spec = "fig3_prize_category.json"; // We're storing the URL of the graph we want to display in a variable
+        let figure_2_spec = "fig3_prize-category.json"; // We're storing the URL of the graph we want to display in a variable
                                                         // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
 
         vegaEmbed('#Location2', figure_2_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
