--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             </p>
         </div>
         <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
     </section>
     
     <!-- This is a script, it's a way to run JavaScript code on the page -->
@@ -118,6 +119,9 @@
 
         vegaEmbed('#Location2', figure_2_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
 
+        let figure_3_spec = "fig5_prize-distribution.json";
+        vegaEmbed('#Location3', figure_3_spec)
+        
     </script>
 
 </body>
