--- a/index.html
+++ b/index.html
@@ -107,7 +107,14 @@
             </p>
         </div>
         <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+                    <p>
+                        Source: Wimbledon, AELTC.
+                    </p>
+        
         <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+                     <p>
+                         Source: Wimbledon, AELTC.
+                    </p>
     </section>
     
     <!-- This is a script, it's a way to run JavaScript code on the page -->
