--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                          Source: Wimbledon, AELTC.
                     </p>
     </section>
+
+    <section>
+        <div class="chart-description">
+            <h2>Week 2: Money Supply</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                A line chart of M2 money supply in the US. 1960-2025.
+            </p>
+        </div>
+        <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
     
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
@@ -124,8 +134,10 @@
         let figure_2_spec = "fig3_prize-category.json"; // We're storing the URL of the graph we want to display in a variable
                                                         // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "fig5_prize-distribution.json";
+        let figure_4_spec = "m2_line_chart.json";
         vegaEmbed('#Location2', figure_2_spec); // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location3', figure_3_spec);
+        vegaEmbed('#Location4', figure_4_spec);
         
     </script>
 
