--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
         </div>
         <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
     </section>
+
+        <section>
+        <div class="chart-description">
+            <h2>Week 3: Making a graph in Colab</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                Trying to put a graph made in Colab on my github page 
+            </p>
+        </div>
+        <figure id="Location5"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
     
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
@@ -135,9 +145,11 @@
                                                         // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "fig5_prize-distribution.json";
         let figure_4_spec = "m2_line_chart.json";
+        let figure_5_spec = "shiller_pe_ratio.json";
         vegaEmbed('#Location2', figure_2_spec); // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location3', figure_3_spec);
         vegaEmbed('#Location4', figure_4_spec);
+        vegaEmbed('#Location4', figure_5_spec);
         
     </script>
 
