--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                                         // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "fig5_prize-distribution.json";
         let figure_4_spec = "m2_line_chart.json";
-        let figure_5_spec = "shiller_pe_ratio.json";
+        let figure_5_spec = "shiller_pe_ratio_chart.json";
         vegaEmbed('#Location2', figure_2_spec); // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location3', figure_3_spec);
         vegaEmbed('#Location4', figure_4_spec);
