--- a/index.html
+++ b/index.html
@@ -396,23 +396,23 @@ https://api.open-meteo.com/v1/forecast?latitude=51.5&longitude=-0.1&hourly=appar
 </div>
 
         <p> <!--Description -->
-            I improved
+            ATP Price Money
         </p>
 
         <h3> <!--Fifth Chart -->
-                    Chart 10. Scraping data from a website
+                    Chart 10. Scraping data from the ATP website
         </h3>
 
         <figure class="chart">
             <div id="Location10"></div> 
             <figcaption>
-                Source:
+                Source: ATP website
             </figcaption>
         </figure>
 
         <script>
 
-        vegaEmbed('#Location10', "graph/")
+        vegaEmbed('#Location10', "graph/prize_money_atp_graph.json")
 
         </script>
 
