--- a/Project/project_index.html
+++ b/Project/project_index.html
@@ -22,7 +22,7 @@
     <h1 class="site-title">Nicolas Rojas</h1>
     <nav class="nav">
       <a href="https://nicolasrojasv.github.io/">Portfolio</a>
-      <a href="#project">Tennis Project</a>
+      <a href="nicolasrojasv.github.io/blob/main/Project/project_index.html">PP434 Project</a>
       <a href="https://www.linkedin.com/in/nicolasrojasv/">LinkedIn</a>
       <a href="https://www.github.com/nicolasrojasv">GitHub</a>
     </nav>
@@ -237,7 +237,7 @@
        FOOTER
   ============================ -->
   <footer class="site-footer">
-    <p>© 2025 Nicolas Rojas. All rights reserved.</p>
+    <p>© 2025 Nicolas Rojas.</p>
   </footer>
 
 </body>
