--- a/Project/project.html
+++ b/Project/project.html
@@ -21,8 +21,8 @@
   <header class="site-header">
     <h1 class="site-title">Nicolas Rojas</h1>
     <nav class="nav">
-      <a href="https://nicolasrojasv.github.io/">Portfolio</a>
-      <a href="https://nicolasrojasv.github.io/Project/project_index.html">PP434 Project</a>
+      <a href="https://nicolasrojasv.github.io/index.html">Portfolio</a>
+      <a href="https://nicolasrojasv.github.io/Project/project.html">Project</a>
       <a href="https://www.linkedin.com/in/nicolasrojasv/">LinkedIn</a>
       <a href="https://www.github.com/nicolasrojasv/nicolasrojasv.github.io">GitHub</a>
     </nav>
