--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <h1 class="site-title">Nicolas Rojas</h1>
     <nav class="nav">
       <a href="https://nicolasrojasv.github.io/index">Portfolio</a>
-      <a href="https://nicolasrojasv.github.io/Project/project.html">PP434 Project</a>
+      <a href="https://nicolasrojasv.github.io/Project/project.html">Project</a>
       <a href="https://www.linkedin.com/in/nicolasrojasv/">LinkedIn</a>
       <a href="https://www.github.com/nicolasrojasv">GitHub</a>
-      <a href="#contact">Contact</a>
     </nav>
   </header>
 
