--- a/Project/project.html
+++ b/Project/project.html
@@ -65,8 +65,11 @@
         extraction using standard Python scraping libraries. An unresolved challenge is 
         finding a way to iterate over a longer time span, as the website blocks access
         after extracting data for approximately eleven years. In addition to this dataset,
-        a separate file containing ATP player characteristics was constructed using this
-        code. To enable comparisons with country-level income inequality, Gini coefficient 
+        a separate file containing 
+        <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/data/players_characteristics.csv">
+        ATP player characteristics</a> was constructed using this
+        <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/scrape_atp_players_overview.ipynb">
+        code</a>. To enable comparisons with country-level income inequality, Gini coefficient 
         data were retrieved from the <a href="https://data.worldbank.org/indicator/SI.POV.GINI">
         World Bank API</a>. Inflation adjustments were performed 
         using data from the <a href="https://fred.stlouisfed.org/docs/api/fred/">
@@ -110,7 +113,7 @@
       <figure class="chart">
         <div id="Location1"></div>
         <figcaption>
-          Source: Data scraped from the ATP website and the World Bank API | 
+          Sources: ATP website and the World Bank API | 
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/ATP_inequality_analysis.ipynb">
           Code </a>for data gathering and analysis | 
           <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/graphs/atp_lorenz_curve_gini_v2.json">
@@ -137,7 +140,7 @@
       <figure class="chart">
         <div id="Location2"></div>
         <figcaption>
-          Source: Data scraped from the ATP website and the World Bank API |
+          Sources: ATP website and the World Bank API |
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/ranking_cutoff_gini_time_series.ipynb">
           Code </a>for data gathering and analysis | 
           <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/graphs/gini_time_series.json">
@@ -169,7 +172,7 @@
       <figure class="chart">
         <div id="Location3"></div>
         <figcaption>
-          Source: Data scraped from the ATP website |
+          Source: ATP website |
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/analising_break_even_point.ipynb">
           Code </a>for data gathering and analysis | 
           <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/graphs/prize_money_distribution.json">
@@ -196,7 +199,7 @@
       <figure class="chart">
         <div id="Location4"></div>
         <figcaption>
-          Source: Data scraped from the ATP website, Balliauw et al. (2017), the European Central Bank and 
+          Sources: ATP website, Balliauw et al. (2017), the European Central Bank and 
           U.S. Bureau of Labor Statistics |
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/analising_break_even_point.ipynb">
           Code </a>for data gathering and analysis | 
@@ -223,7 +226,7 @@
        <figure class="chart">
         <div id="Location5"></div>
         <figcaption>
-          Source: Data scraped from the ATP website, Balliauw et al. (2017), the European Central Bank and 
+          Sources: ATP website, Balliauw et al. (2017), the European Central Bank and 
           U.S. Bureau of Labor Statistics |
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/analising_break_even_point.ipynb">
           Code </a>for data gathering and analysis | 
@@ -263,7 +266,7 @@
       <figure class="chart">
         <div id="Location7"></div>
         <figcaption>
-          Source: Data scraped from the ATP website | 
+          Source: ATP website | 
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/predicting_longevity_prize_money.ipynb">
           Code </a>for data gathering and analysis | 
           <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/graphs/career_duration_vs_prize_money.json">
@@ -286,7 +289,7 @@
       <figure class="chart">
         <div id="Location6"></div>
          <figcaption>
-          Source: Data scraped from the ATP website and the Federal Reserve Bank | 
+          Sources: ATP website and the Federal Reserve Bank | 
           <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/predicting_longevity_prize_money.ipynb">
           Code </a>for data gathering and analysis | 
           <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/graphs/predicting_longevity.json">
