--- a/Project/project.html
+++ b/Project/project.html
@@ -322,7 +322,7 @@
         professional tennis careers. A remaining limitation is that annual costs were
         adjusted for inflation, while actual costs may have increased faster, potentially 
         overstating the share of players reaching break-even—an issue future work could 
-        address by automating and updating cost estimates
+        address by automating and updating cost estimates.
       </p>
 
     </section>
