--- a/Project/project.html
+++ b/Project/project.html
@@ -279,11 +279,13 @@
       </script>
 
       <p>
-        A Random Forest regression model estimated in scikit-learn shows a positive 
-        relationship between cumulative earnings and career length; however, despite a
-        relatively high R², substantial dispersion, particularly for short careers, suggests
-        that earnings alone do not determine longevity, highlighting the role of 
-        additional factors such as injuries, sponsorships, and institutional support.
+        A Random Forest regression model estimated using scikit-learn appears to show 
+        strong explanatory power for the relationship between cumulative earnings and 
+        career duration, with an R² of 78%. However, despite this relatively high R²,
+        the model exhibits substantial dispersion—particularly for short careers—where 
+        predicted durations can be up to twice or half the actual length. This suggests
+        that earnings alone do not determine career longevity, highlighting the importance
+        of additional factors such as injuries, sponsorships, and institutional support.
       </p>
 
       <figure class="chart">
