--- a/Project/project.html
+++ b/Project/project.html
@@ -58,7 +58,7 @@
         <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/Project/data/players_activity.csv">
         dataset</a> covering all ATP-ranked players active between the 2014 and 2025 
         seasons. The dataset records prize money earned across all tournaments, and the
-        <a href="https://github.com/nicolasrojasv/nicolasrojasv.github.io/blob/main/scrape_price_money_atp_players.ipynb">
+        <a href="https://colab.research.google.com/github/nicolasrojasv/nicolasrojasv.github.io/blob/main/scrape_price_money_atp_players.ipynb">
         code</a> is designed to be easily extended to earlier players or future seasons by
         expanding the date range. A key challenge was accessing the ATP website’s 
         underlying API endpoints, as the platform does not allow straightforward data
